--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
         "@types/node": "^16.18.112",
         "@types/react": "^18.3.11",
         "@types/react-dom": "^18.3.0",
+        "@xyflow/react": "^12.3.1",
         "async-retry": "^1.3.3",
+        "monaco-editor-webpack-plugin": "^7.1.0",
         "puppeteer-core": "^23.5.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-draggable": "^4.4.6",
+        "react-monaco-editor": "^0.56.2",
         "react-scripts": "5.0.1",
+        "react-split-pane": "^0.1.92",
         "typescript": "^4.9.5",
         "uuid": "^10.0.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
         "start:electron": "ELECTRON_START_URL=http://localhost:3000 electron .",
         "pretty": "npx prettier . --write"
     },
@@ -50,6 +55,7 @@
     "devDependencies": {
         "@types/electron": "^1.6.10",
         "electron": "^32.1.1",
-        "prettier": "3.3.3"
+        "prettier": "3.3.3",
+        "react-app-rewired": "^2.2.1"
     }
 }
