--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
         "async-retry": "^1.3.3",
         "monaco-editor-webpack-plugin": "^7.1.0",
         "puppeteer-core": "^23.5.0",
+        "puppeteer-screen-recorder": "3.0.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-draggable": "^4.4.6",
         "react-monaco-editor": "^0.56.2",
-        "react-scripts": "5.0.1",
-        "react-split-pane": "^0.1.92",
+        "react-scripts": "^5.0.1",
         "typescript": "^4.9.5",
         "uuid": "^10.0.0",
         "web-vitals": "^2.1.4"
